adding review route
